<resources>
    <string name="app_name">Letang Data</string>
    <string-array name="religion">
        <item>हिन्दू</item>
        <item>बौद्ध</item>
        <item>इस्लाम</item>
        <item>क्रिश्चियन</item>
        <item>किराँत</item>
        <item>शिख</item>
        <item>जैन</item>
        <item>बताउन नचाहेको</item>
        <item>अन्य</item>
    </string-array>
    <string name="A">टामान्ो वववरण </string>
    <string name="a1">घरधनीकज वववरण </string>
    <string name="ghardhani_name">1. घरधनीको नाम </string>
    <string name="ghardhani_sex">2. मलङ्ग </string>
    <string name="ghardhani_contact">3. मोबाइल नं </string>
    <string name="samanya_title1">सामान्य विवरण</string>
    <string name="prasanik_biraran">प्रशासनिक विवरण</string>
    <string name="pradesh_no">प्रदेश नं:</string>
    <string name="jilla">जिल्ला</string>
    <string name="morang">Morang</string>
    <string name="nagarpalika">नगरपालिका</string>
    <string name="letang">Letang</string>
    <string name="wardno">बार्ड नं</string>
    <string name="bastikoname">बस्तीको नाम</string>
    <string name="tolename">टोलको नाम</string>
    <string name="sadak_marga">सडक मार्गको नाम</string>
    <string name="ghar_bibranan">घरको विवरण</string>
    <string name="aakanxhya">अक्षांशः</string>
    <string name="desantar">देशान्तरः</string>
    <string name="altitude">उँचाइः</string>
    <string name="house_code">घर नं कोड</string>
    <string name="gharkoname">घरधनीको नाम</string>
    <string name="linga">लिङ्ग</string>
    <string name="purush">पुरूष</string>
    <string name="mahila">महिला</string>
    <string name="mobileno">मोबाइल नं</string>
    <string name="vada_title">भाडामा रहेको परिवार विवरण (घरधनीलाइ सोध्ने)</string>
    <string name="vada_population">भाडामा बस्ने जम्मा परिवार संख्या</string>
    <string name="ghar_uudhyam_byabasaye">तपाईंको घरमा सन्चालन उद्धम ब्यवसाय खुलाउनुहोस</string>
    <string name="pariwarbibaran_t2">पारिवारिक विवरण</string>
    <string name="suchanadata_bibaran">परिवार सूचनादाताको विवरण</string>
    <string name="name">नाम</string>
    <string name="lingaa">लिङ्ग</string>
    <string name="purus">पुरूष</string>
    <string name="mahilaa">महिला</string>
    <string name="umers">उमेर</string>
    <string name="dhuri_email">घरधुरीके सम्पर्क इमेल</string>
    <string name="ghar_swamitwa_basai">घरको स्वामित्व र बसाइ अवधि</string>
    <string name="swamitwa">स्वामित्व</string>
    <string name="ghardhani">घरधनी</string>
    <string name="vada_take">भाडा</string>
    <string name="basai_aabadhi_time">बसाई अवधि</string>
    <string name="lessthan6">६ महिना भन्दा कम</string>
    <string name="morethan6">६ महिना भन्दा बढी</string>
    <string name="jativasadharma">जाति, भाषा, धर्म विवरण</string>
    <string name="jatiya_samuha">जातीय समूह</string>
    <string name="dalit">दलित</string>
    <string name="sanyasi">सन्यासी (दशनामी)</string>
    <string name="janjati">जनजाती</string>
    <string name="madesi">मधेसी</string>
    <string name="aanya">अन्य</string>
    <string name="jatjati2">जातजाती</string>
    <string name="dharma2">धर्म</string>
    <string name="matrivasa_of">मातृभाषा</string>
    <string name="basai_sarai_title">बसाइ सराइ सम्बन्धी विवरण</string>
    <string name="pariwarbasobas">तपाइको परिवारको बसोबासको अवस्था कस्तो हो ?</string>
    <string name="raithane">रैथाने</string>
    <string name="after2070">२०७० पछि आएको</string>
    <string name="after2060">२०६० पछि आएको</string>
    <string name="after2050">२०५० पछि आएको</string>
    <string name="after2040">२०४० पछि आएको</string>
    <string name="where_you_comefrom">कुन स्थानबाट आउनु भएको हो? (रैथाने बाहेक अरूलाई)</string>
    <string name="hereNp">यही नपा</string>
    <string name="thisJilla">यही जिल्ला</string>
    <string name="npajpa">( नपा/ गापा )</string>
    <string name="thisJillas">अन्य जिल्ला</string>
    <string name="bideshbatacome">विदेशबाट</string>
    <string name="basaikaran_exceptraithane">यहाँ बसाइ सर्नुको कारण के होला? (रैथाने बाहेकलाई)?</string>
    <string name="rojgari">रोजगारी</string>
    <string name="teachings">शिक्षा</string>
    <string name="aarthikaabasr">आर्थिक अवसर</string>
    <string name="surakshyaa">सुरक्षा</string>
    <string name="biwahaa">विवाह</string>
    <string name="byabasayesipp">नोकरी व्यवसाय ৴शिप</string>
    <string name="basaiaabadhi">बसाइको अवधि कस्तो हो??</string>
    <string name="niyamit">नियमित</string>
    <string name="lessthanof6">वर्षमा ६ महिनाभन्दा कम</string>
    <string name="title_a1_final">घरधनीको विवरण</string>
    <string name="t3_1">व्यक्तिगत विवरण</string>
    <string name="t3_12">परिवार सदस्य संख्या</string>
    <string name="t2_aamadani">आम्दानी खर्चको विवरण</string>
    <string name="t2_rojgar_byakti">परिवारमा जागिरे व्यक्ति को संख्या</string>
    <string name="t2_byawasaye">परिवारमा व्यवसाय गर्ने व्यक्तिको संख्या</string>
    <string name="t2_aadhyan_student">परिवारमा अध्ययन गर्ने व्यक्तिको संख्या</string>
    <string name="t2_aamdani_ask">परिवारको गत वर्षको बार्षिक आम्दानी कति थियो? (रकम)</string>
    <string name="t2_pasu_palan">कृषि तथा पशुपालन (रकम)</string>
    <string name="t2_uudhyogss">व्यापार तथा उद्योग (रकम)</string>
    <string name="t2_nokariis">नोकरी तथा पेन्सन (रकम)</string>
    <string name="t2_samajiks">सामाजिक भत्ता (रकम)</string>
    <string name="t2_y_bidesh">बैदेशिक रोजगार (रकम)</string>
    <string name="t2_jyala_majduri">ज्याला मजदुरी (रकम)</string>
    <string name="t2_ghar_vada">घरभाडा (रकम)</string>
    <string name="t2_bachatts">बचत तथा लगानी व्याज (रकम)</string>
    <string name="t2_aanya">अन्य (रकम)</string>
    <string name="t2_9">परिवारको गत वर्षको बार्षिक खर्च कति थियो? (रकम)</string>
    <string name="t2_10">खाना (रकम)</string>
    <string name="t4_11">लत्ता कपडा (रकम)</string>
    <string name="t4_12">शिक्षा (रकम)</string>
    <string name="t2_123">स्वास्थ्य (रकम)</string>
    <string name="t2_989">मनोरञ्जन, चाडपर्व तथा सामाजिक कार्य (रकम)</string>
    <string name="t2_housev">घरभाडा (रकम)</string>
    <string name="t2_what">कृषि तथा पशुपालन (रकम)</string>
    <string name="t4_vhuktani">किस्ता भुक्तानी (रकम)</string>
    <string name="t2_petrols">इन्धन (रकम)</string>
    <string name="t2_nepal_yatayat">यातायात (रकम)</string>
    <string name="t2_omg">अन्य (रकम)</string>
    <string name="t2_ghat_tobidesh">घरमा कोही बैदिशिक रोजगारको लागि जानुभएको छ?</string>
    <string name="t2_kuchvi">गत १ बर्षभित्र प्राप्त रेमिट्यान्स के के मा खर्च गर्नुभयो?</string>
    <string name="t5_dainaiks">दैनिक उपभोग</string>
    <string name="T7_yoyo">व्यवसाय लगानी</string>
    <string name="t6_paydebts">ऋण तिर्न</string>
    <string name="fg_5">सामाजिक कार्य</string>
    <string name="weq">शिक्षा स्वास्थ्य</string>
    <string name="fhghj">अन्य</string>
    <string name="gfgr">घरायसी सम्पत्ति</string>
    <string name="vbvb">बचत</string>
    <string name="asdd_0">परिवारले गत वर्षसम्म गरेका आर्थिक लगानीका क्षेत्रहरू</string>
    <string name="yuyuy">घरजग्गा</string>
    <string name="ioasd">सहकारी</string>
    <string name="saudasd_u">उद्योग तथा व्यापार</string>
    <string name="asdas">आफ्नो खाद्यान्न उत्पादनले मात्र वर्षमा कति महिना खान पुग्छ?</string>
    <string name="asd2">३ महिनाभन्दा कम खान पुग्ने</string>
    <string name="ascvvcb">४–६ महिना खान पुग्ने</string>
    <string name="vbvbxc">७–९ महिना खान पुग्ने</string>
    <string name="vbcvbcvbc">१०–१२ महिना खान पुग्ने</string>
    <string name="zxxx">आफ्नो उत्पादन खान पुगेर बेच विखन गर्ने</string>
    <string name="xcscs">उत्पादन नभएको</string>
    <string name="frfrgh">तपाईको कूल आम्दानीले वार्षिक खर्च धान्न पुग्छ वा पुग्दैन?</string>
    <string name="ioio">पुग्छ</string>
    <string name="oppopopoa">पुग्दैन</string>
    <string name="bgjiso">पुग्दैन भने थप व्यवस्थापन (बहुउत्तर)</string>
    <string name="zxcas">संचित धनको प्रयोग</string>
    <string name="zxcaw">पैंचो सापटी</string>
    <string name="asdwdr">चलअचल सम्पत्ति बिक्री</string>
    <string name="cvettsa">अन्य</string>
    <string name="asd22pp0">तपाईको परिवार को (कुनै पनि सदश्यको) बैंकमा खाता छ?</string>
    <string name="xxxccccccca">छ</string>
    <string name="no_xccccccca">छैन</string>
    <string name="yesuiasd">परिवारमा हाल कतैबाट ऋण सापटी लिएको छ?</string>
    <string name="huhuhuas">छ</string>
    <string name="ooais">छैन</string>
    <string name="wfqw">यदि छ भने कता बाट</string>
    <string name="asd2d2">बैंक वा वित्तीय संस्था</string>
    <string name="asdasd">शौचालय सम्बन्धी विवरण</string>
    <string name="asdasdasdasda">शौचालय छ वा छैन?</string>
    <string name="ioasdc">छ</string>
    <string name="iashdiuqw">छैन</string>
    <string name="aiuwndq">छ भने कस्तो</string>
    <string name="ndunq">कच्ची (फ्लस नभएको)</string>
    <string name="adui2">पक्की (फ्लस भएको)</string>
    <string name="ecosanns">ECOSAN (खाल्डो वाला)</string>
    <string name="jtajsia90">शौचालय नभएको</string>
    <string name="mmmmmmm">शौचालय कता छ?</string>
    <string name="dq12oj31">घरभित्र</string>
    <string name="dmi21">बाहिर</string>
    <string name="jio123">चर्पीको फोहर कसरी व्यवस्थापन गर्नुभएको छ?</string>
    <string name="jiosadiou72981">सेफ्टीक टेंक</string>
    <string name="dok12">खाल्डो खनेर</string>
    <string name="cr7sa">लिफ्ट गरेर</string>
    <string name="radias9123">अन्य</string>
    <string name="dahui1230">अन्य</string>
    <string name="d1i2j3k">विद्युतीय सेवाहरूमा पहुँच</string>
    <string name="ashdu1">तपाईको परिवारले के के सेवाहरू अनलाइन तथा एप्स् मार्फत लिने गरेको छ?</string>
    <string name="heyraam">बैंक৴एटीएम</string>
    <string name="toitsala">पर्यटन</string>
    <string name="asjdui124">सामाजिक सुरक्षा भत्ता</string>
    <string name="asdjio12">उद्योग</string>
    <string name="asdjio12asd">व्यनक्तिगत घटना दर्ता</string>
    <string name="nkadsjq">खरीद</string>
    <string name="asdjio1">कर प्रणाली</string>
    <string name="maskkkksi">बिक्री</string>
    <string name="mt848">दैनिक उपभोग सामग्री</string>
    <string name="davshool">स्वास्थ्य</string>
    <string name="njdhgfp">स्वास्थ्य</string>
    <string name="lastaivoyar">सञ्चार</string>
    <string name="asdjioq123">खानेपानी</string>
    <string name="asjod8846">कृषि</string>
    <string name="otitotitot0">अन्य</string>
    <string name="idsoq00">आर्थिक पहुँचको अवस्था</string>
    <string name="ijlkasd99">परिवारको मुख्य पेशा?</string>
    <string name="asjdi299">कृषि तथा पशुपालन</string>
    <string name="asd92">नोकरी</string>
    <string name="asdji299">व्यापार</string>
    <string name="asdkoqwmd66">उद्यम, व्यवसाय</string>
    <string name="asdjiasid223">सरकारी जागिर</string>
    <string name="uutituti">दैनिक ज्यालादारी</string>
    <string name="asashma">निजिक्षेत्र मा रोजगार</string>
    <string name="asdj2i2i">बैदेशिक रोजगार</string>
    <string name="asdkvas">स्वरोजगार</string>
    <string name="kaisuiatt">अन्य</string>
    <string name="picakhshu">अन्य</string>
    <string name="o1">सामाजिक</string>
    <string name="o2">सामाजिक संलग्नता – कुन संघ संस्था वा समुहमा अवद्ध</string>
    <string name="o3">टोल विकास संस्था</string>
    <string name="o4">कृषि वा पशुपालन समुह</string>
    <string name="o5">सामुदायिक वा कबुलियती वन समुह</string>
    <string name="o6">सहकारी संस्था</string>
    <string name="o7">गैर सरकारी संस्था</string>
    <string name="o8">सांस्कृतिक समूह (गुठी, कुल, धर्म)</string>
    <string name="o9">महिला समुह</string>
    <string name="o10">आमा समुह</string>
    <string name="o11">लघुबित्त समुह</string>
    <string name="o12">उपभोक्ता समुह वा समिति</string>
    <string name="o13">कतै आवद्ध नभएको</string>
    <string name="o14">बालक्लब</string>
    <string name="o16">जनचेतना तथा सीपमूलक तालिम प्राप्त</string>
    <string name="o17">छ</string>
    <string name="o18">छैन</string>
    <string name="o19">छ भने</string>
    <string name="o20">नेतृत्व तथा संस्थागत विकास</string>
    <string name="o21">व्यवसायिक सीप विकास</string>
    <string name="o22">पोषण तथा मातृ शिशु स्याहार</string>
    <string name="o23">विपद् जोखिम न्यूनीकरण</string>
    <string name="o24">खानेपानी र स्वास्थ्य र सरसफार्इ</string>
</resources>