<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/o1"
        android:textAlignment="center"
        android:textColor="@color/colorBlackText"
        android:textSize="@dimen/title_fontSize" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o2"
        android:textColor="@color/colorBlackText"
        android:textSize="@dimen/question_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o3"
        android:textSize="@dimen/radio_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o4"
        android:textSize="@dimen/radio_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o5"
        android:textSize="@dimen/radio_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o6"
        android:textSize="@dimen/radio_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o7"
        android:textSize="@dimen/radio_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o8"
        android:textSize="@dimen/radio_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o9"
        android:textSize="@dimen/radio_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o10"
        android:textSize="@dimen/radio_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o11"
        android:textSize="@dimen/radio_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o12"
        android:textSize="@dimen/radio_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o13"
        android:textSize="@dimen/radio_fontSize" />

    <CheckBox
        android:id="@+id/t3_social_inv_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/o14"
        android:textSize="@dimen/radio_fontSize" />

    <include layout="@layout/separator" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o16"
        android:textColor="@color/colorBlackText"
        android:textSize="@dimen/question_fontSize" />

    <RadioGroup
        android:id="@+id/t3_rg_received_training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/t3_rb_has_received_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/o17"
            android:textSize="@dimen/radio_fontSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/o18"
            android:textSize="@dimen/radio_fontSize" />
    </RadioGroup>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/t3_layout_trainings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o19"
            android:textColor="@color/colorBlackText"
            android:textSize="@dimen/question_fontSize" />

        <CheckBox
            android:id="@+id/t3_train_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/o20"
            android:textSize="@dimen/radio_fontSize" />

        <CheckBox
            android:id="@+id/t3_train_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/o21"
            android:textSize="@dimen/radio_fontSize" />

        <CheckBox
            android:id="@+id/t3_train_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/o22"
            android:textSize="@dimen/radio_fontSize" />

        <CheckBox
            android:id="@+id/t3_train_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/o23"
            android:textSize="@dimen/radio_fontSize" />

        <CheckBox
            android:id="@+id/t3_train_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/o24"
            android:textSize="@dimen/radio_fontSize" />

    </LinearLayout>

    <include layout="@layout/separator" />

</LinearLayout>