<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/idsoq00"
        android:textAlignment="center"
        android:textColor="@color/colorBlackText"
        android:textSize="@dimen/title_fontSize" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ijlkasd99"
        android:textColor="@color/colorBlackText"
        android:textSize="@dimen/question_fontSize" />

    <RadioGroup
        android:id="@+id/t2_finance_rg_primaryIncomeSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/asjdi299"
            android:textSize="@dimen/radio_fontSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/asd92"
            android:textSize="@dimen/radio_fontSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/asdji299"
            android:textSize="@dimen/radio_fontSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/asdkoqwmd66"
            android:textSize="@dimen/radio_fontSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/asdjiasid223"
            android:textSize="@dimen/radio_fontSize" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/uutituti"
            android:textSize="@dimen/radio_fontSize" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/asashma"
            android:textSize="@dimen/radio_fontSize" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/asdj2i2i"
            android:textSize="@dimen/radio_fontSize" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/asdkvas"
            android:textSize="@dimen/radio_fontSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/kaisuiatt"
            android:textSize="@dimen/radio_fontSize" />
        
        <EditText
            android:id="@+id/t2_finance_edit_primaryIncomeSource_others"
            android:hint="@string/picakhshu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>


    <!--took 57 from here to xml_two_nine_extraghar-->

    <include layout="@layout/separator" />

</LinearLayout>