<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/asdasd"
        android:textAlignment="center"
        android:textColor="@color/colorBlackText"
        android:textSize="@dimen/title_fontSize" />

    <RadioGroup
        android:id="@+id/t2_toilet_rg_hasToilet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asdasdasdasda"
            android:textColor="@color/colorBlackText"
            android:textSize="@dimen/question_fontSize" />

        <RadioButton
            android:id="@+id/t2_toilet_rb_hasToilet_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/ioasdc"
            android:textSize="@dimen/radio_fontSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/iashdiuqw"
            android:textSize="@dimen/radio_fontSize" />

    </RadioGroup>

    <!--if toilet yes-->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/t2_toilet_layout_toiletTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aiuwndq"
            android:textColor="@color/colorBlackText"
            android:textSize="@dimen/content_fontSize" />

        <RadioGroup
            android:id="@+id/t2_toilet_rg_toiletType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ndunq"
                android:textSize="@dimen/radio_fontSize" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/adui2"
                android:textSize="@dimen/radio_fontSize" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ecosanns"
                android:textSize="@dimen/radio_fontSize" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/jtajsia90"
                android:textSize="@dimen/radio_fontSize" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmmmmmm"
            android:textColor="@color/colorBlackText"
            android:textSize="@dimen/question_fontSize" />

        <RadioGroup
            android:id="@+id/t2_toilet_bhitra_bahira"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/t2_toilet_bhitra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/dq12oj31"
                android:textSize="@dimen/radio_fontSize" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/dmi21"
                android:textSize="@dimen/radio_fontSize" />
        </RadioGroup>
        <include layout="@layout/separator" />

    </LinearLayout>

    <include layout="@layout/separator" />

    <!--toilet waste manage-->
    <RadioGroup
        android:id="@+id/t2_toilet_rg_wasteMgmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jio123"
            android:textColor="@color/colorBlackText"
            android:textSize="@dimen/question_fontSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/jiosadiou72981"
            android:textSize="@dimen/radio_fontSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/dok12"
            android:textSize="@dimen/radio_fontSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/cr7sa"
            android:textSize="@dimen/radio_fontSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/radias9123"
            android:textSize="@dimen/radio_fontSize" />

        <EditText
            android:id="@+id/t2_toilet_wasteMgmt_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dahui1230"/>
    </RadioGroup>

    <include layout="@layout/separator" />

</LinearLayout>
